feat : fixed workflows

--- a/modules/04/05.continuous-testing/.github/workflows/ci.yml
+++ b/modules/04/05.continuous-testing/.github/workflows/ci.yml
@@ -30,6 +30,8 @@ jobs:
           node-version: 18
 
       - run: npm install
+      - name: Check Redis
+        run: redis-cli -h 127.0.0.1 -p 6379 ping
       - run: npm test
 
       
