allez stp marche

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,12 +34,7 @@ jobs:
           cd 04/05.continuous-testing
           npm install
 
-      - name: Check Redis
-        run: redis-cli -h 127.0.0.1 -p 6379 ping
-
       - name: Run tests
         run: |
-          cd 05.continuous-testing/
+          cd 04/05.continuous-testing
           npm test
-
-          
