--- a/modules/04/package.json
+++ b/modules/04/package.json
@@ -1,12 +1,13 @@
 {
-  "dependencies": {
-    "express": "^5.1.0"
-  },
   "name": "04",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "express": "^5.1.0"
   },
   "keywords": [],
   "author": "",
